src/components/Scale/Scale.css
.scale-wrapper {
	display: flex;
	flex-direction: column;
	align-items: center;
	filter: drop-shadow(0 0 0.3rem rgba(0, 0, 0, 0.5));
}

.scale-wrapper h1 {
	background-color: white;
	padding: 0.5rem 1rem;
	border-top-right-radius: 0.75rem;
	border-top-left-radius: 0.75rem;
}

.scale-svg {
	width: 30rem;
}

@media (max-width: 1350px) {
	.scale-svg {
		width: 25rem;
	}

	.scale-wrapper h1 {
		font-size: 1.3rem;
		padding: 0.4rem 0.9rem;
	}
}

@media (max-width: 1120px) {
	.scale-svg {
		width: 22rem;
	}

	.scale-wrapper h1 {
		font-size: 1.1rem;
		padding: 0.2rem 0.8rem;
	}
}

@media (max-width: 1000px) {
	.scale-svg {
		width: 18rem;
	}

	.scale-wrapper h1 {
		font-size: 1rem;
	}
}

